main — WindowedStore is not functioning, and I can't figure it out now.